# sure-unpack

./: Cargo.toml  LICENSE  README.md  README.zh-cn.md
.github/workflows/: release.yml  rust.yml
src/: backend.rs  cli.rs  error.rs  format.rs  lib.rs  main.rs  safety.rs  tool.rs
src/backend/: seven_z.rs  tar.rs  zip.rs
src/pack/: cli.rs  mod.rs  run.rs
src/pack/backend/: lz4.rs  mod.rs  seven_z.rs  single.rs  tar.rs  zip.rs
src/unpack/: cli.rs  mod.rs  run.rs
src/unpack/backend/: lz4.rs  mod.rs  single.rs  tar.rs
tests/: integration.rs  pack_integration.rs  unpack_integration.rs
