[package]
name = "sure-unpack"
version = "0.3.1"
edition = "2024"
license = "MIT"
description = "Header-based universal archive unpacker and packer"

[lib]
name = "sure_unpack"
path = "src/lib.rs"

[[bin]]
name = "unpack"
path = "src/bin/unpack.rs"

[[bin]]
name = "pack"
path = "src/bin/pack.rs"

[dependencies]
